# speconn-python

./: .gitignore  Containerfile.build  build.sh  pyproject.toml
speconn-protocol/: pyproject.toml
speconn-protocol/src/speconn_protocol/: __init__.py  abort_signal.py  client.py  context.py  context_key.py  envelope.py  error.py  router.py  transport.py
src/speconn/: __init__.py  abort_signal.py  client.py  context.py  context_key.py  error.py  format.py  router.py  server.py  server_channel.py  transport.py  transport_aiohttp.py  transport_httpx.py  transport_pyqwest.py
src/speconn/adapters/: asgi.py
tests/: test_context.py
tests/interop/: client.py  package-lock.json  server.py  server_helper.py
