[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speconn"
version = "0.1.0"
description = "Python runtime for Speconn RPC"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/speconn"]

[project.optional-dependencies]
pyreqwest = ["pyreqwest"]
httpx = ["httpx"]
