[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speconn"
version = "0.3.0"
description = "Python runtime for Speconn RPC"
requires-python = ">=3.11"
dependencies = ["specodec @ git+https://github.com/specodec/specodec-python.git@v0.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/speconn"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
pyreqwest = ["pyreqwest"]
httpx = ["httpx"]